[gd_scene load_steps=8 format=2]

[ext_resource path="res://Font/Roboto/Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/planetSprite.gd" type="Script" id=2]
[ext_resource path="res://Scenes/MathPlanet.gd" type="Script" id=3]
[ext_resource path="res://images/Ships/UFO.png" type="Texture" id=4]
[ext_resource path="res://images/Planets/addition.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=2]
size = 90
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 263
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="MathPlanet" type="Control"]
anchor_right = 0.156
anchor_bottom = 0.278
margin_right = 0.47998
margin_bottom = -0.240021
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 148, 154 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
stretch_mode = 1

[node name="StageUFO" type="Control" parent="."]
margin_left = 74.0
margin_top = 34.0
margin_right = 114.0
margin_bottom = 74.0

[node name="TextureRect2" type="TextureRect" parent="StageUFO"]
margin_left = 180.0
margin_top = 81.0
margin_right = 314.0
margin_bottom = 158.0
texture = ExtResource( 4 )
expand = true

[node name="ShipLabel" type="Label" parent="StageUFO"]
unique_name_in_owner = true
anchor_left = 0.825
anchor_top = 1.24
anchor_right = 0.825
anchor_bottom = 1.24
margin_left = 168.0
margin_top = -6.6
margin_right = 272.0
margin_bottom = 148.4
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "20"
align = 1
valign = 1

[node name="PlanetLabel" type="Label" parent="StageUFO"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.0
margin_top = -56.0
margin_right = 125.0
margin_bottom = 253.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.756863 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 1 )
text = "+"
align = 1
valign = 1

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -82.0
margin_top = -44.0
margin_right = 370.0
margin_bottom = 381.0

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
